CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(IBUS_CLOUD_PINYIN)
ADD_SUBDIRECTORY(src bin)

# VERSION should be same as src/config.h

SET(VERSION "1.0.0")

IF(NOT DEFINED SHARE_INSTALL_PREFIX)
  SET(PKGDATADIR "${CMAKE_INSTALL_PREFIX}/share/ibus-cloud-pinyin")
ELSE()
  SET(PKGDATADIR "${SHARE_INSTALL_PREFIX}/ibus-cloud-pinyin")
ENDIF()

#CONFIGURE_FILE(sogoupycc.xml.template sogoupycc.xml)
#CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in" "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(uninstall "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")

#INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/sogoupycc.xml DESTINATION share/ibus/component)
#INSTALL(FILES config.lua DESTINATION ${PKGDATADIR})
#INSTALL(PROGRAMS fetcher DESTINATION ${PKGDATADIR})
