CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(NOT DEFINED SHARE_INSTALL_PREFIX)
  SET(PKGDATADIR "${CMAKE_INSTALL_PREFIX}/share/ibus-cloud-pinyin")
ELSE()
  SET(PKGDATADIR "${SHARE_INSTALL_PREFIX}/ibus-cloud-pinyin")
ENDIF()

ADD_EXECUTABLE(ibus-cloud-pinyin LuaState.cpp;main.cpp)

# Boost
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread)

# Lua

# About lua pkg-config:
# Archlinux: lua
# Debian: lua5.1
# FreeBSD: lua-5.1
# Match any one of them

FIND_PACKAGE(PkgConfig)
PKG_SEARCH_MODULE(LUA51 REQUIRED lua5.1 lua-5.1 lua)
PKG_CHECK_MODULES(REQPKGS REQUIRED ibus-1.0>=1.2.0;glib-2.0>=2.22;gthread-2.0>=2.22;dbus-1>=1.2;sqlite3;gtk+-2.0;gdk-2.0;libnotify>=0.4)

SET_SOURCE_FILES_PROPERTIES(${SRCS} COMPILE_FLAGS "-pthread -DPKGDATADIR=${PKGDATADIR}")
SET_TARGET_PROPERTIES(ibus-cloud-pinyin PROPERTIES LINK_FLAGS "-s")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_DIR};${REQPKGS_INCLUDE_DIRS};${LUA51_INCLUDE_DIRS};${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${REQPKGS_LIBRARY_DIRS};${LUA51_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(ibus-cloud-pinyin ${REQPKGS_LIBRARIES};${LUA51_LIBRARIES};${Boost_LIBRARIES})

INSTALL(TARGETS ibus-cloud-pinyin DESTINATION ${PKGDATADIR}/engine)
