CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(IBUS_CLOUD_PINYIN_TEST)
SET(TEST_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src)

ADD_EXECUTABLE(test-main ${TEST_SRC_DIR}/LuaState.cpp;test_main.cpp)

# Boost
SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options thread test_exec_monitor)

# Lua

# About lua pkg-config:
# Archlinux: lua
# Debian: lua5.1
# FreeBSD: lua-5.1
# Match any one of them

FIND_PACKAGE(PkgConfig)
PKG_SEARCH_MODULE(LUA51 REQUIRED lua5.1 lua-5.1 lua)
PKG_CHECK_MODULES(REQPKGS REQUIRED ibus-1.0>=1.2.0;glib-2.0>=2.22;gthread-2.0>=2.22;dbus-1>=1.2;sqlite3;gtk+-2.0;gdk-2.0;libnotify>=0.4)

SET_SOURCE_FILES_PROPERTIES(${SRCS} COMPILE_FLAGS "-pthread")

INCLUDE_DIRECTORIES(${TEST_SRC_DIR};${CMAKE_CURRENT_DIR};${REQPKGS_INCLUDE_DIRS};${LUA51_INCLUDE_DIRS};${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${REQPKGS_LIBRARY_DIRS};${LUA51_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(test-main ${REQPKGS_LIBRARIES};${LUA51_LIBRARIES};${Boost_LIBRARIES})
